# wordle-bot

./: CHANGELOG.md  README.md  Wordle.hs  debug.hs  helper.hs  playToday.hs  stats.hs  trainBot.hs  wordle-words.cabal
app/: PlayToday.hs  Stats.hs  TrainBot.hs
lib/: Wordle.hs
test/: WordleTest.hs
tests/: WordleTest.hs
