cabal-version:      2.4
name:               wordle-words
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             FranckErnewein
maintainer:         franck.ernewein@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library wordle-words-lib
    exposed-modules: Wordle
    hs-source-dirs: lib
    build-depends: base ^>=4.16.4.0, containers ^>=0.6.5.1
    default-language: Haskell2010

executable play
    main-is:          PlayToday.hs
    build-depends:    base ^>=4.16.4.0, wordle-words-lib
    hs-source-dirs:   app
    default-language: Haskell2010

executable stats
    main-is:          Stats.hs
    build-depends:    base ^>=4.16.4.0, wordle-words-lib
    hs-source-dirs:   app
    default-language: Haskell2010

executable train
    main-is:          TrainBot.hs
    build-depends:    base ^>=4.16.4.0, time ^>=1.11.1.1, wordle-words-lib
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: WordleTest.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, wordle-words-lib
    hs-source-dirs: test
    default-language: Haskell2010
